<resources>
    <string name="app_name">Employee Information</string>
    <string name="action_add">Add</string>
    <!-- Strings used for fragments for navigation -->
    <string name="employee_information_label">Employee Information</string>
    <string name="add_employee_label">Add Employee</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="device_not_connected_to_internet">"Device not connected to internet "</string>
    <string name="employee_salary">"Salary : "</string>
    <string name="employee_age">Age : </string>
    <string name="name">Name</string>
    <string name="salary">Salary</string>
    <string name="age">Age</string>
    <string name="record_save_successfully">Record Save Successfully</string>
    <string name="serviceFailureError">Something went wrong</string>
    <string name="employee_deleted_successfully">Employee Deleted Successfully</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_information">Employee Information</string>
    <string name="search">Search</string>
    <string name="match_not_found">Match Not Found</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="input_required">Input required</string>

</resources>
